@@ -14,6 +14,8 @@ Version 1.4.20 - SVN
   - Make base URL autodetection more robust; fixes some lighttpd issues
     (probably #1741469).
   - Encoded From headers now properly quoted (#2830141).
+  - Multibyte strings (notably subjects) are now handled correctly (#2824813,
+    #2925731).
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
